--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server",
-    "dev": "nodemon server",
-    "build": "npm run build"
+    "dev": "nodemon server"
   },
   "keywords": [],
   "author": "",
