--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemailer": "^6.9.7",
     "puppeteer": "^21.6.0",
     "stripe": "^14.5.0",
+    "twilio": "^5.0.0-rc.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
